# i18n-country-translations-data

./: .gitignore  Cargo.toml  LICENSE  README.md  data.go  go.mod  i18n-country-translations-data.gemspec  mix.exs  package-lock.json  package.json
lib/: i18n_country_translations_data.ex  i18n_country_translations_data.rb
scripts/: validate.js
